--- a/resume.tex
+++ b/resume.tex
@@ -4,6 +4,7 @@
 \documentclass{resume}
 
 \usepackage[left=1cm, top=1cm, right=1cm, bottom=1cm]{geometry} % Document margins
+\usepackage{cvstyles}
 
 \name{Ricardo Ferreira Guimarães}
 \address{+47 48 48 03 81 \\ Bergen, Norway} 
@@ -11,5 +12,6 @@
 
 \begin{document}
     \input{sec_objective.tex}
+    \input{sec_education.tex}
 \end{document}
 
