--- a/resume.tex
+++ b/resume.tex
@@ -4,6 +4,8 @@
 \documentclass{resume}
 
 \usepackage[left=1cm, top=1cm, right=1cm, bottom=1cm]{geometry} % Document margins
+\usepackage{enumitem}
+\usepackage{xparse}
 \usepackage{cvstyles}
 
 \name{Ricardo Ferreira Guimarães}
@@ -13,5 +15,6 @@
 \begin{document}
     \input{sec_objective.tex}
     \input{sec_education.tex}
+    \input{sec_experience.tex}
 \end{document}
 
