--- a/sec_education.tex
+++ b/sec_education.tex
@@ -3,13 +3,13 @@
 % SPDX-License-Identifier: Apache-2.0
 
 \begin{rSection}{Education}
-    \eduItem{PhD in Computer Science}{\IMEUSP}{2015 \textendash{} 2020}{%
+    \eduItem{PhD in Computer Science}{2015 \textendash{} 2020}{\IMEUSP, \USP}{São Paulo, Brazil}{%
         Thesis: \href{https://www.teses.usp.br/teses/disponiveis/45/45134/tde-19032020-043422/publico/thesis.pdf}{Modularity in Belief Change of Description  Logic Bases}\\
         Relevant Coursework: Artificial Intelligence Lab, Reasoning About Knowledge, Machine Learning 
     } 
 
-    \eduItem{BSc in Computer Science}{\IMEUSP}{2011 \textendash{} 2014}{%
-        \emph{Honourable Mention} \textemdash{} Bachelor Project: Extensions to the AML Ontology Aligner\\
+    \eduItem{BSc in Computer Science}{2011 \textendash{} 2014}{\IMEUSP, \USP}{São Paulo, Brazil}[Honourable Mention]{%
+        Bachelor Project: Extensions to the AML Ontology Aligner\\
         Relevant Coursework: Algorithm Analysis, Database Systems, Extreme Programming Lab, Numerical Linear Algebra 
     }
 \end{rSection}
