Add UniBZ experience

--- a/cvstyles.sty
+++ b/cvstyles.sty
@@ -24,3 +24,6 @@
 
 \newcommand{\UiB}{\href{https://www.uib.no/en/}{University of Bergen}}
 \newcommand{\IIUiB}{\href{https://www.uib.no/en/ii/}{Department of Informatics}}
+
+\newcommand{\Unibz}{\href{https://www.unibz.it/en/}{Free University of Bozen-Bolzano}}
+\newcommand{\SciTechUnibz}{\href{https://www.unibz.it/en/faculties/sciencetechnology/}{Faculty of Science and Technology}}
