--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -1,9 +1,15 @@
 \begin{rSection}{Experience}
-    \expItem{Postdoctoral Research Fellow}{Dec 2020\textendash{}Present}{\IIUiB, \UiB}{Bergen, Norway}{%
+    \expItem{Postdoctoral Research Fellow}{Dec 2020\textendash{}Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
         \begin{itemize}[nosep]
             \item Research: collaborate with peers inside and outside the university, and publish results in scientific venues.
             \item Teaching: prepare courses and activities, and deliver lectures.
             \item Co-supervision of master and PhD students.
+        \end{itemize}%
+    }
+
+    \expItem{Research Assistant}{Mar 2020\textendash{}Nov 2020}{\SciTechUnibz, \Unibz}{Bozen-Bolzano, Italy}[Full-time fixed-term]{%
+        \begin{itemize}[nosep]
+            \item Research: collaborate with peers inside and outside the university, and publish results in scientific venues.
         \end{itemize}%
     }
 \end{rSection}
