Add RIA experience

--- a/cvstyles.sty
+++ b/cvstyles.sty
@@ -27,3 +27,6 @@
 
 \newcommand{\Unibz}{\href{https://www.unibz.it/en/}{Free University of Bozen-Bolzano}}
 \newcommand{\SciTechUnibz}{\href{https://www.unibz.it/en/faculties/sciencetechnology/}{Faculty of Science and Technology}}
+
+\newcommand{\UoM}{\href{https://www.manchester.ac.uk/}{University of Manchester}}
+\newcommand{\IMGUoM}{\href{https://www.cs.manchester.ac.uk/research/expertise/information-management/}{Information Management Group}}
