--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -1,5 +1,5 @@
 \begin{rSection}{Experience}
-    \expItem{Postdoctoral Research Fellow}{Dec 2020\textendash{}Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
+    \expItem{Postdoctoral Research Fellow}{Dec 2020 \textendash{} Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
         \begin{itemize}[nosep]
             \item Research: collaborate with peers inside and outside the university, and publish results in scientific venues.
             \item Teaching: prepare courses and activities, and deliver lectures.
@@ -7,9 +7,16 @@
         \end{itemize}%
     }
 
-    \expItem{Research Assistant}{Mar 2020\textendash{}Nov 2020}{\SciTechUnibz, \Unibz}{Bozen-Bolzano, Italy}[Full-time fixed-term]{%
+    \expItem{Research Assistant}{Mar 2020 \textendash{} Nov 2020}{\SciTechUnibz, \Unibz}{Bozen-Bolzano, Italy}[Full-time fixed-term]{%
         \begin{itemize}[nosep]
             \item Research: collaborate with peers inside and outside the university, and publish results in scientific venues.
+        \end{itemize}%
+    }
+
+    \expItem{Academic Visitor}{Apr 2018 \textendash{} Jan 2019}{\IMGUoM, \UoM}{Manchester, UK}[Full-time internship]{%
+        \begin{itemize}[nosep]
+            \item Research: collaborate within the group on empirical aspects and implementations of Ontology Repair.
+            \item \href{https://bv.fapesp.br/en/bolsas/176114/improving-efficiency-of-belief-base-change-in-description-logics-with-modularity-in-ontologies/}{Funded by São Paulo Research Agency ({FAPESP})}
         \end{itemize}%
     }
 \end{rSection}
