Add license and copyright header

--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -1,3 +1,7 @@
+% SPDX-FileCopyrightText: 2023 Trey Hunner
+%
+% SPDX-License-Identifier: FSFAP
+
 \begin{rSection}{Experience}
     \expItem{Postdoctoral Research Fellow}{Dec 2020 \textendash{} Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
         \begin{itemize}[nosep]
