--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -1,6 +1,6 @@
-% SPDX-FileCopyrightText: 2023 Trey Hunner
+% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
 %
-% SPDX-License-Identifier: FSFAP
+% SPDX-License-Identifier: Apache-2.0
 
 \begin{rSection}{Experience}
     \expItem{Postdoctoral Research Fellow}{Dec 2020 \textendash{} Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
