Add Rede Linux experience

--- a/cvstyles.sty
+++ b/cvstyles.sty
@@ -30,3 +30,5 @@
 
 \newcommand{\UoM}{\href{https://www.manchester.ac.uk/}{University of Manchester}}
 \newcommand{\IMGUoM}{\href{https://www.cs.manchester.ac.uk/research/expertise/information-management/}{Information Management Group}}
+
+\newcommand{\RedeLinux}{\href{https://www.linux.ime.usp.br/}{Rede Linux}}
