--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -23,4 +23,10 @@
             \item \href{https://bv.fapesp.br/en/bolsas/176114/improving-efficiency-of-belief-base-change-in-description-logics-with-modularity-in-ontologies/}{Funded by São Paulo Research Agency ({FAPESP})}
         \end{itemize}%
     }
+
+    \expItem{System Administrator}{Mar 2013 \textendash{} Feb 2015}{\RedeLinux, \IMEUSP, \USP}{São Paulo, Brazil}[Part-time internship]{%
+        \begin{itemize}[nosep]
+            \item Maintenance and development of the computer network that supports the institute's undergraduate students.
+        \end{itemize}%
+    }
 \end{rSection}
