Add skills section

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,8 @@
 
 \begin{document}
     \input{sec_objective.tex}
-    \input{sec_education.tex}
     \input{sec_experience.tex}
+    \input{sec_education.tex}
+    \input{sec_skills.tex}
 \end{document}
 
