Fix skills section

--- a/sec_skills.tex
+++ b/sec_skills.tex
@@ -3,7 +3,7 @@
 % SPDX-License-Identifier: Apache-2.0
 \begin{rSection}{Skills}
     \begin{description}[nosep]
-        \item[Technical:] Python, Java, C, Semantic Technologies (Knowledge Graphs, Ontologies, OWL, RDF, SPARQL, Protégé), Data Science (\href{https://www.coursera.org/account/accomplishments/specialization/certificate/V45HAAHQS4AE}{IBM Specialization}), SQL, GNU/Linux, Git, \LaTeX, Extreme Programming (Agile)
+        \item[Technical:] Python, Java, C, SQL, GNU/Linux, Git, \LaTeX, Knowledge Graphs, Ontologies, OWL, RDF, SPARQL, Protégé, Data Science (\href{https://www.coursera.org/account/accomplishments/specialization/certificate/V45HAAHQS4AE}{IBM Specialization}), Extreme Programming (Agile)
         \item[Soft:] Problem-solving, Adaptability, Time Management, Scientific Method/Research, Academic Writing
         \item[Languages:] English (proficient), Norwegian (basic), Portuguese (native)
     \end{description}
