Add misc section

--- a/resume.tex
+++ b/resume.tex
@@ -27,5 +27,6 @@
     \input{sec_education.tex}
     \input{sec_skills.tex}
     \input{sec_publications.tex}
+    \input{sec_misc.tex}
 \end{document}
 
