Improve publication rendering

--- a/cvstyles.sty
+++ b/cvstyles.sty
@@ -35,6 +35,6 @@
 
 \NewDocumentCommand{\InProcCite}{mo}{%
     \IfNoValueTF{#2}%
-    {\Citeauthor{#1} \citetitle{#1}. In: \citefield{#1}{booktitle} \citeyear{#1}}%
-    {\Citeauthor{#1} \href{#2}{\citetitle{#1}}. In: \citefield{#1}{booktitle} \citeyear{#1}}%
+    {\Citeauthor{#1} \citetitle{#1}. In: \citefield{#1}{booktitle}, \citeyear{#1}}%
+    {\Citeauthor{#1} \href{#2}{\citetitle{#1}}. In: \citefield{#1}{booktitle}, \citeyear{#1}}%
 }
