--- a/cv.bib
+++ b/cv.bib
@@ -1,10 +1,6 @@
-% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
-%
-% SPDX-License-Identifier: Apache-2.0
-
 @InProceedings{Matos2019,
   author    = {Vin{\'{\i}}cius Bitencourt Matos and Ricardo Ferreira Guimar{\~{a}}es and Yuri David Santos and Renata Wassermann},
-  booktitle = {Description Logic, Theory Combination, and All That - Essays Dedicated to Franz Baader on the Occasion of His 60th Birthday},
+  booktitle = {Description Logic, Theory Combination, and All That},
   title     = {Pseudo-contractions as Gentle Repairs},
   year      = {2019},
   editor    = {Carsten Lutz and Uli Sattler and Cesare Tinelli and Anni{-}Yasmin Turhan and Frank Wolter},
