Consistent spacing and style in misc section

--- a/sec_misc.tex
+++ b/sec_misc.tex
@@ -3,7 +3,7 @@
 % SPDX-License-Identifier: Apache-2.0
 
 \begin{rSection}{Miscellaneous}
-    \begin{description}[nosep]
+    \begin{description}
         \item[Event Organisation:] {
             \begin{itemize}
                 \item[]
@@ -12,7 +12,7 @@
             \end{itemize}
         }
         \item[Invited Talks:]{
-            \begin{itemize}[nosep]
+            \begin{itemize}
                 \item[]
                 \item Belief Change with Models as Input: Adapting Expansion and Contraction. \href{https://web.archive.org/web/20221205091252/https://irl.w.uib.no/}{IRL 2022}
                 \item Reasoning in Knowledge Graphs. \href{https://researchschool.w.uib.no/}{AIB 2022}
@@ -20,18 +20,18 @@
             \end{itemize}
         }
         \item[Teaching]{
-            \begin{itemize}[nosep]
+            \begin{description}
                 \item[]
-                \item \href{https://web.archive.org/web/20220707214216/https://www.uib.no/en/course/INF207#}{INF207-22H}: Social Networks Theory (Bachelor/Master level)
-                \item \href{https://web.archive.org/web/20210918132515/https://www.uib.no/en/course/INF367#}{INF367-21H}: Selected Topics in Artificial Intelligence: Ontologies and Knowledge Graphs (Master level)
-            \end{itemize}
+                \item[\href{https://web.archive.org/web/20220707214216/https://www.uib.no/en/course/INF207#}{INF207-22H}:] Social Networks Theory (Bachelor/Master level)
+                \item[\href{https://web.archive.org/web/20210918132515/https://www.uib.no/en/course/INF367#}{INF367-21H}:] Selected Topics in Artificial Intelligence: Ontologies and Knowledge Graphs (Master level)
+            \end{description}
         }
         \item[Code Projects]{
             \begin{description}
                 \item[]
                 \item[\href{https://gitlab.com/rfguimaraes/owl-change}{OWL2DL-Change: Modularisation}:] Implementation of Belief Change algorithms over OWL 2 DL ontologies using OWL. The code is instrumented with JMH for measuring the impact of ontology modularisation on computational performance.
                 \item[\href{https://gitlab.com/rfguimaraes/owl2dl-ccc}{OWL2DL-CCC}:] Uses OWL API to create ontology datasets by modifying OWL ontologies according to specification given as JSON. Creates test cases for non-standard reasoning tasks.
-                \item[\href{https://github.com/rfguimaraes/DataScienceCapstone}{IBM Data Science Specialization Capstone Project}:] Developed as task for attaining the certification. Employs a wide range of skills and tools in Data Science (Pandas, SQL, Dash, Scikit-learn) to investigate the recovery rate of stage 1 rockets in SpaceX's Falcon 9 launches.
+     FileCopy   \item[\href{https://github.com/rfguimaraes/DataScienceCapstone}{IBM Data Science Specialization Capstone Project}:] Developed as task for attaining the certification. Employs a wide range of skills and tools in Data Science (Pandas, SQL, Dash, Scikit-learn) to investigate the recovery rate of stage 1 rockets in SpaceX's Falcon 9 launches.
             \end{description}
         }
     \end{description} 
