--- a/sec_objective.tex
+++ b/sec_objective.tex
@@ -4,6 +4,6 @@
 
 \begin{rSection}{OBJECTIVE}
 
-Researcher with 3 years of experience in Knowledge Representation, seeking full-time research or development roles.
+Computer Scientist with experience in Knowledge Representation, seeking full-time research or development roles.
 
 \end{rSection}
