Split misc section and improve consistency

--- a/resume.tex
+++ b/resume.tex
@@ -16,6 +16,10 @@
 ]{biblatex}
 \addbibresource{cv.bib}
 
+\hypersetup{
+    colorlinks=false
+}
+
 \name{Ricardo Ferreira Guimarães}
 \address{+47 48 48 03 81 \\ Bergen, Norway} 
 \address{\href{mailto:rfguimaraes0@gmail.com}{rfguimaraes0@gmail.com} \\ \href{https://rfguimaraes.github.io}{rfguimaraes.github.io}}
@@ -27,6 +31,9 @@
     \input{sec_education.tex}
     \input{sec_skills.tex}
     \input{sec_publications.tex}
-    \input{sec_misc.tex}
+    \input{sec_code.tex}
+    \input{sec_teaching.tex}
+    \input{sec_roles.tex}
+    \input{sec_talks.tex}
 \end{document}
 
