--- a/sec_publications.tex
+++ b/sec_publications.tex
@@ -3,7 +3,7 @@
 % SPDX-License-Identifier: Apache-2.0
 
 \begin{rSection}{Selected Publications}
-    \begin{itemize}[nosep]
+    \begin{itemize}
         \item \InProcCite{Guimaraes2023}
         \item \InProcCite{Persia2023}[https://doi.org/10.7557/18.6801]
         \item \InProcCite{Guimaraes2022}[https://doi.org/10.4230/oasics.aib.2022.2]
