Initial draft of achievement-focused experience

--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -5,28 +5,29 @@
 \begin{rSection}{Experience}
     \expItem{Postdoctoral Research Fellow}{Dec 2020 \textendash{} Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
         \begin{itemize}
-            \item Research: collaborate with peers inside and outside the university, and publish results in scientific venues.
-            \item Teaching: prepare courses and activities, and deliver lectures.
-            \item Co-supervision of master and PhD students.
+            \item Published papers on high-quality venues on Artificial Intelligence (JAIR, AAAI, NLDL).
+            \item Planned, created material for, and delivered two courses.
+            \item Co-supervised 2 master students and 2 PhD students.
         \end{itemize}%
     }
 
     \expItem{Research Assistant}{Mar 2020 \textendash{} Nov 2020}{\SciTechUnibz, \Unibz}{Bozen-Bolzano, Italy}[Full-time fixed-term]{%
         \begin{itemize}
-            \item Research: collaborate with peers inside and outside the university, and publish results in scientific venues.
+            \item Collaborated with internal peers and published results in scientific venues, including a renowned conference in AI (AAAI).
         \end{itemize}%
     }
 
     \expItem{Academic Visitor}{Apr 2018 \textendash{} Jan 2019}{\IMGUoM, \UoM}{Manchester, UK}[Full-time internship]{%
         \begin{itemize}
-            \item Research: collaborate within the group on empirical aspects and implementations of Ontology Repair.
+            \item Collaborated within the group on empirical aspects and implementations of Ontology Repair and published results in an international workshop.
+
             \item \href{https://bv.fapesp.br/en/bolsas/176114/improving-efficiency-of-belief-base-change-in-description-logics-with-modularity-in-ontologies/}{Funded by São Paulo Research Agency ({FAPESP})}
         \end{itemize}%
     }
 
     \expItem{System Administrator}{Mar 2013 \textendash{} Feb 2015}{\RedeLinux, \IMEUSP, \USP}{São Paulo, Brazil}[Part-time internship]{%
         \begin{itemize}
-            \item Maintenance and development of the computer network that supports the institute's undergraduate students.
+            \item Maintained and developed the computer network that supports the institute's undergraduate students.
         \end{itemize}%
     }
 \end{rSection}
