Fix compilation issue

--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -5,9 +5,11 @@
 \begin{rSection}{Experience}
     \expItem{Postdoctoral Research Fellow}{Dec 2020 \textendash{} Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
         \begin{itemize}
-            \item Published papers on high-quality venues on Artificial Intelligence (JAIR, AAAI, NLDL).
+            \item Published main results on high-quality venues on Artificial Intelligence (JAIR, AAAI, NLDL).
+            \item Communicated results on international workshops.
             \item Planned, created material for, and delivered two courses.
             \item Co-supervised 2 master students and 2 PhD students.
+            \item Co-organised a research school on Artificial Intelligence.
         \end{itemize}%
     }
 
@@ -20,7 +22,6 @@
     \expItem{Academic Visitor}{Apr 2018 \textendash{} Jan 2019}{\IMGUoM, \UoM}{Manchester, UK}[Full-time internship]{%
         \begin{itemize}
             \item Collaborated within the group on empirical aspects and implementations of Ontology Repair and published results in an international workshop.
-
             \item \href{https://bv.fapesp.br/en/bolsas/176114/improving-efficiency-of-belief-base-change-in-description-logics-with-modularity-in-ontologies/}{Funded by São Paulo Research Agency ({FAPESP})}
         \end{itemize}%
     }
