Fill notable roles section (Fix #3)

--- a/sec_roles.tex
+++ b/sec_roles.tex
@@ -1,8 +1,8 @@
 \begin{rSection}{Notable Roles}
-    \begin{itemize}
-        \item Publicity co-chair of the \href{https://dl2023.w.uib.no/}{DL 2023} (international workshop)
-        \item Co-organiser of the \href{https://researchschool.w.uib.no/}{AIB 2022} (research school) 
-        \item PC member
-        \item Reviewer
-    \end{itemize} 
+    \begin{description}
+        \item[Co-organiser:] \href{https://researchschool.w.uib.no/}{AIB 2022} (research school) 
+        \item[Publicity co-chair:] \href{https://dl2023.w.uib.no/}{DL 2023} (international workshop)
+        \item[PC member:]   \href{https://dl2023.w.uib.no/}{DL 2023}, \href{https://aaai.org/Conferences/AAAI-23/}{AAAI 2023}, \href{http://dl.kr.org/dl2022}{DL2022}, \href{https://kr2022.cs.tu-dortmund.de/}{KR2022}
+        \item[Reviewer:] Information and Computation Journal, Artificial Intelligence Journal (AIJ)
+    \end{description} 
 \end{rSection}
