Add missing copyright headers

--- a/cv.bib
+++ b/cv.bib
@@ -1,3 +1,7 @@
+% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
+%
+% SPDX-License-Identifier: Apache-2.0
+
 @InProceedings{Matos2019,
   author    = {Vin{\'{\i}}cius Bitencourt Matos and Ricardo Ferreira Guimar{\~{a}}es and Yuri David Santos and Renata Wassermann},
   booktitle = {Description Logic, Theory Combination, and All That},
