--- a/sec_talks.tex
+++ b/sec_talks.tex
@@ -1,3 +1,7 @@
+% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
+%
+% SPDX-License-Identifier: Apache-2.0
+
 \begin{rSection}{Invited Talks}
     \begin{itemize}
         \item Belief Change with Models as Input: Adapting Expansion and Contraction. \href{https://web.archive.org/web/20221205091252/https://irl.w.uib.no/}{IRL 2022}
