--- a/sec_code.tex
+++ b/sec_code.tex
@@ -1,3 +1,7 @@
+% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
+%
+% SPDX-License-Identifier: Apache-2.0
+
 \begin{rSection}{Code Projects}
     \begin{description}
         \item[\href{https://gitlab.com/rfguimaraes/owl-change}{OWL2DL-Change: Modularisation}:] Implementation of Belief Change algorithms over OWL 2 DL ontologies using OWL. The code is instrumented with JMH for measuring the impact of ontology modularisation on computational performance.
