--- a/sec_roles.tex
+++ b/sec_roles.tex
@@ -1,3 +1,7 @@
+% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
+%
+% SPDX-License-Identifier: Apache-2.0
+
 \begin{rSection}{Notable Roles}
     \begin{description}
         \item[Co-organiser:] \href{https://researchschool.w.uib.no/}{AIB 2022} (research school) 
