--- a/sec_teaching.tex
+++ b/sec_teaching.tex
@@ -1,3 +1,7 @@
+% SPDX-FileCopyrightText: 2023 Ricardo Guimarães <rfguimaraes0@gmail.com>
+%
+% SPDX-License-Identifier: Apache-2.0
+
 \begin{rSection}{Teaching}
     \begin{description}[nosep]
         \item [\href{https://web.archive.org/web/20220707214216/https://www.uib.no/en/course/INF207}{INF207-22H}:] Social Networks Theory (Bachelor/Master level)
