Improve writing of experience section (Fix #1)

--- a/sec_experience.tex
+++ b/sec_experience.tex
@@ -5,7 +5,7 @@
 \begin{rSection}{Experience}
     \expItem{Postdoctoral Research Fellow}{Dec 2020 \textendash{} Present}{\IIUiB, \UiB}{Bergen, Norway}[Full-time fixed-term]{%
         \begin{itemize}
-            \item Published main results on high-quality venues on Artificial Intelligence (JAIR, AAAI, NLDL).
+            \item Published results on high-quality venues on Artificial Intelligence (AAAI 2023, NLDL 2023, JAIR (to appear)).
             \item Communicated results on international workshops.
             \item Planned, created material for, and delivered two courses.
             \item Co-supervised 2 master students and 2 PhD students.
@@ -15,14 +15,14 @@
 
     \expItem{Research Assistant}{Mar 2020 \textendash{} Nov 2020}{\SciTechUnibz, \Unibz}{Bozen-Bolzano, Italy}[Full-time fixed-term]{%
         \begin{itemize}
-            \item Collaborated with internal peers and published results in scientific venues, including a renowned conference in AI (AAAI).
+            \item Collaborated with international colleagues and presented research results at AAAI 2021.
         \end{itemize}%
     }
 
     \expItem{Academic Visitor}{Apr 2018 \textendash{} Jan 2019}{\IMGUoM, \UoM}{Manchester, UK}[Full-time internship]{%
         \begin{itemize}
-            \item Collaborated within the group on empirical aspects and implementations of Ontology Repair and published results in an international workshop.
-            \item \href{https://bv.fapesp.br/en/bolsas/176114/improving-efficiency-of-belief-base-change-in-description-logics-with-modularity-in-ontologies/}{Funded by São Paulo Research Agency ({FAPESP})}
+            \item Published results of the collaboration in an international workshop on Ontology Modularity (WOMoCoE 2018).
+            \item \href{https://bv.fapesp.br/en/bolsas/176114/improving-efficiency-of-belief-base-change-in-description-logics-with-modularity-in-ontologies/}{Funded by São Paulo Research Agency ({FAPESP})}.
         \end{itemize}%
     }
 
