Streamine description of code projects (#3)

--- a/resume.tex
+++ b/resume.tex
@@ -30,6 +30,7 @@
     \input{sec_experience.tex}
     \input{sec_education.tex}
     \input{sec_skills.tex}
+    \pagebreak
     \input{sec_publications.tex}
     \input{sec_code.tex}
     \input{sec_teaching.tex}
