--- a/sec_code.tex
+++ b/sec_code.tex
@@ -4,8 +4,8 @@
 
 \begin{rSection}{Code Projects}
     \begin{description}
-        \item[\href{https://gitlab.com/rfguimaraes/owl-change}{OWL2DL-Change: Modularisation}:] Implementation of Belief Change algorithms over OWL 2 DL ontologies using OWL. The code is instrumented with JMH for measuring the impact of ontology modularisation on computational performance.
-        \item[\href{https://gitlab.com/rfguimaraes/owl2dl-ccc}{OWL2DL-CCC}:] Uses OWL API to create ontology datasets by modifying OWL ontologies according to specification given as JSON. Creates test cases for non-standard reasoning tasks.
-        \item[\href{https://github.com/rfguimaraes/DataScienceCapstone}{IBM Data Science Specialization Capstone Project}:] Developed as task for attaining the certification. Employs a wide range of skills and tools in Data Science (Pandas, SQL, Dash, Scikit-learn) to investigate the recovery rate of stage 1 rockets in SpaceX's Falcon 9 launches.
+        \item[\href{https://gitlab.com/rfguimaraes/owl-change}{OWL2DL-Change: Modularisation}:] Implemented of Belief Change algorithms for OWL 2 DL ontologies using OWL API (Java). The code is instrumented with JMH for benchmarking.
+        \item[\href{https://gitlab.com/rfguimaraes/owl2dl-ccc}{OWL2DL-CCC}:] Created a tool that generates test cases for non-standard reasoning tasks (e.g.\ repair). It uses OWL API to handle the source ontologies and JSON to specify the types of test cases generated.
+        \item[\href{https://github.com/rfguimaraes/DataScienceCapstone}{Data Science Capstone Project}:] Developed as a simple task for attaining the certification. Employs skills and tools in Data Science (SQL, Scikit-learn) to investigate the recovery rate of the stage 1 in Falcon 9 launches.
     \end{description}
 \end{rSection}
