Fix AAAI 23 entry

--- a/cv.bib
+++ b/cv.bib
@@ -46,7 +46,7 @@
 @InProceedings{Guimaraes2023,
   author    = {Ricardo Guimar{\~{a}}es and Ana Ozaki and S. Ribeiro, Jandson},
   booktitle = {AAAI},
-  title     = {{Mining {$\mathcal{EL}^\bot$} Bases with Adaptable Role Depth}},
+  title     = {{Finite Based Contraction and Expansion via Models}},
   year      = {2023},
   publisher = {Association for the Advancement of Artificial Intelligence ({AAAI})},
   journal   = {AAAI},
