Add other interests

--- a/resume.tex
+++ b/resume.tex
@@ -36,4 +36,5 @@
     \input{sec_teaching.tex}
     \input{sec_roles.tex}
     \input{sec_talks.tex}
+    \input{sec_other_interests.tex}
 \end{document}
