Improve "Other Interests" section

--- a/sec_other_interests.tex
+++ b/sec_other_interests.tex
@@ -4,9 +4,10 @@
 
 \begin{rSection}{Other Interests}
     \begin{itemize}
-        \item Natural Science
-        \item Technology
+        \item Natural Sciences
         \item Behavioural Sciences
+        \item Technology
+        \item Languages
         \item Board Games
     \end{itemize}
 \end{rSection}
