--- a/sec_objective.tex
+++ b/sec_objective.tex
@@ -4,6 +4,7 @@
 
 \begin{rSection}{OBJECTIVE}
 
-Computer Scientist with experience in Knowledge Representation, seeking full-time research or development roles.
+Dedicated and curious PhD in Computer Science with experience in Artificial Intelligence (particularly in Knowledge Representation). 
+Seeking a full-time research or development opportunity to employ my flexible background in digital transformations.
 
 \end{rSection}
