--- a/sec_objective.tex
+++ b/sec_objective.tex
@@ -4,7 +4,7 @@
 
 \begin{rSection}{OBJECTIVE}
 
-Dedicated and curious PhD in Computer Science with experience in Artificial Intelligence (particularly in Knowledge Representation). 
-Seeking a full-time research or development opportunity to employ my flexible background in digital transformations.
+Dedicated and curious Computer Scientist (PhD) with expertise in Artificial Intelligence (especially Knowledge Representation). 
+Seeking a full-time research or development opportunity to employ my skills in digital transformations.
 
 \end{rSection}
