Tentative one page resume

--- a/resume.tex
+++ b/resume.tex
@@ -26,15 +26,15 @@
 \DeclareNameAlias{author}{family-given}
 
 \begin{document}
-    \input{sec_objective.tex}
+    % \input{sec_objective.tex}
     \input{sec_experience.tex}
     \input{sec_education.tex}
     \input{sec_skills.tex}
-    \pagebreak
-    \input{sec_publications.tex}
-    \input{sec_code.tex}
-    \input{sec_teaching.tex}
+    % \pagebreak
+    % \input{sec_publications.tex}
+    % \input{sec_code.tex}
+    % \input{sec_teaching.tex}
     \input{sec_roles.tex}
-    \input{sec_talks.tex}
-    \input{sec_other_interests.tex}
+    % \input{sec_talks.tex}
+    % \input{sec_other_interests.tex}
 \end{document}
