--- a/cv.bib
+++ b/cv.bib
@@ -44,7 +44,7 @@
 }
 
 @InProceedings{Guimaraes2023,
-  author    = {Ricardo Guimar{\~{a}}es and Ana Ozaki and S. Ribeiro, Jandson},
+  author    = {Ricardo Guimar{\~{a}}es and Ana Ozaki and Ribeiro, Jandson S.},
   booktitle = {AAAI},
   title     = {{Finite Based Contraction and Expansion via Models}},
   year      = {2023},
