--- a/sec_roles.tex
+++ b/sec_roles.tex
@@ -3,7 +3,7 @@
 % SPDX-License-Identifier: Apache-2.0
 
 \begin{rSection}{Notable Roles}
-    \begin{description}
+    \begin{description}[nosep]
         \item[Co-organiser:] \href{https://researchschool.w.uib.no/}{AIB 2022} (research school) 
         \item[Publicity co-chair:] \href{https://dl2023.w.uib.no/}{DL 2023} (international workshop)
         \item[PC member:]   \href{https://dl2023.w.uib.no/}{DL 2023}, \href{https://aaai.org/Conferences/AAAI-23/}{AAAI 2023}, \href{http://dl.kr.org/dl2022}{DL2022}, \href{https://kr2022.cs.tu-dortmund.de/}{KR2022}
